# poly2tri

./: dlhrunone.sh  dlhsetenvvars.sh  wscript  wscript.withshewchuck
poly2tri/: CMakeLists.txt
poly2tri/Debug/: poly2tri-static.lib
poly2tri/Release/: poly2tri-static.lib
poly2tri/common/: shapes.cc  shapes.h  utils.h
poly2tri/shewchuk/: basetypes.h  predicates.cpp  predicates.h
poly2tri/sweep/: sweep.cc  sweep.h
testbed/: main.cc
testbed/p2t/: p2t.sln
testbed/p2t/p2t/: p2t.vcxproj
